# testlibi2c

./: .gitignore  README.md  meson.build
test/: meson.build  test_i2c.c
